--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "expo": "^26.0.0",
     "firebase": "^4.12.1",
+    "lib": "^3.0.2",
     "native-base": "^2.4.1",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
